[package]
authors = ["Peltoche <dev@halium.fr>"]
build = "build.rs"
edition = "2018"
name = "vixi"
version = "0.1.0"

[[bin]]
name = "vixi"
path = "src/main.rs"

[build-dependencies]
clap = "2.32.0"
version_check = "0.1.3"

[dependencies]
chrono = "0.4.6"
dirs = "1.0.5"
fern = "0.5.7"
lazy_static = "1.3.0"
log = "0.4.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.ncurses]
version = "5.99.0"
features  = ["extended_colors", "wide", "wide_chtype"]

[dependencies.clap]
features = ["suggestions", "color", "wrap_help"]
version = "2.32.0"

[dependencies.xi-core-lib]
branch = "master"
git = "https://github.com/xi-editor/xi-editor"

[dependencies.xi-rpc]
branch = "master"
git = "https://github.com/xi-editor/xi-editor"

[workspace]
members = ["./plugins/*"]
